# CPP_XEM_PARSER

./: .gitmodules  CMakeLists.txt  COMPOSITES.txt.txt  PIC.XEM  README.md
doc/: CMakeLists.txt
src/: CMakeLists.txt  client.cpp  xem_parser.cpp
test/: CMakeLists.txt  test_xem_parser.cpp  test_xem_parser.hpp  valid_composites.txt.txt  valid_pic_filtered.XEM
test/doc/: doxygen.conf  readme.txt
test/src/: xem_parser.hpp
